2007-06-18  Donald E. Curtis <dcurtis3@sourceforge.net>

        * libavogadro/src/engine.*: added some engine flags for
        transparency atoms, bonds, molecules so that the glwidget
        has a better idea of the capabilities of the engines.  also added
        the transparencyDepth relative to others.  this needs a conceptual
        update just because i don't think it's intuitive.  if people define
        theirs higher than other engines they get priority.  i still believe
        this should be dependent on the ::radius response for the specific
        primitive type we're trying to compare.

        * libavogadro/src/glwidget.*: engines are now sorted on load
        based on their flags and their transparencyDepth.

2007-06-17  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.*: Fixed a bug in mass selection where
	the pointer was going past the end of the buffer.  Had to make sure
	our pointer stays sane.

	* libavogadro/src/primitive.*: Removed old selection code.

        * libavogadro/src/selectrotate.cpp: Updated so that if there are
        multiple engines, the toggling of selection only happens once per
        primitive.

        * avogadro/src/extensions/gamessinputdialog.cpp: Fixed bug 1720467.

2007-06-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/mainwindow.*: Remove quit() event -- Mac clients
	should receive a closeEvent for every window (advice from
	Trolltech).

	* avogadro/src/extensions/unitcell*: Add support for controlling
	unit cell dimensions and angles. Add a warning if the molecule
	does not yet have a unit cell record -- extension will suggest a
	possible box dimenison.

2007-06-16  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/engines/axesengine.cpp:
	Improvements to the axes engine rendering - all axes should be of
	equal length now.

	* libavogadro/src/engines/sphereengine.cpp,
	libavogadro/src/engines/spheresettingswidget.ui: